--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dev:prepare": "nuxt-module-build --stub && nuxi prepare playground",
     "release": "npm run lint && npm run test && npm run prepack && changelogen --release && npm publish && git push --follow-tags",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "test": "vitest run",
     "test:watch": "vitest watch",
     "docs:dev": "vitepress dev docs",
@@ -41,17 +42,17 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
-    "@nuxt/eslint-config": "^0.4.0",
+    "@nuxt/eslint-config": "^0.5.0",
     "@nuxt/kit": "^3.12.4",
     "@nuxt/module-builder": "^0.8.1",
     "@nuxt/schema": "^3.12.4",
     "@nuxt/test-utils": "^3.14.0",
     "@nuxt/ui": "^2.18.2",
     "@types/node": "^20.14.13",
-    "@typescript-eslint/eslint-plugin": "^7.17.0",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
     "caniuse-lite": "^1.0.30001643",
     "changelogen": "^0.5.5",
-    "eslint": "^8.57.0",
+    "eslint": "^9.8.0",
     "nuxt": "^3.12.4",
     "vitepress": "^1.3.1",
     "vitest": "^2.0.4"
