--- a/package.json
+++ b/package.json
@@ -11,18 +11,18 @@
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/types.d.ts",
+      "types": "./dist/module.d.mts",
       "import": "./dist/module.mjs",
-      "require": "./dist/module.cjs"
+      "require": "./dist/module.mjs"
     }
   },
-  "main": "./dist/module.cjs",
-  "types": "./dist/types.d.ts",
+  "main": "./dist/module.mjs",
+  "types": "./dist/types.d.mts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "prepack": "nuxt-module-build",
+    "prepack": "nuxt-module-build build",
     "dev": "nuxi dev playground",
     "dev:host": "nuxi dev playground --host",
     "dev:build": "nuxi build playground",
@@ -41,20 +41,20 @@
     "maplibre-gl": "^5.11.0"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
-    "@nuxt/eslint-config": "^0.5.0",
-    "@nuxt/kit": "^3.14.0",
-    "@nuxt/module-builder": "^0.8.1",
-    "@nuxt/schema": "^3.14.0",
-    "@nuxt/test-utils": "^3.14.0",
+    "@nuxt/devtools": "^3.0.1",
+    "@nuxt/eslint-config": "^1.10.0",
+    "@nuxt/kit": "^4.2.0",
+    "@nuxt/module-builder": "^1.0.2",
+    "@nuxt/schema": "^4.2.0",
+    "@nuxt/test-utils": "^3.20.1",
     "@nuxt/ui": "^2.18.2",
-    "@types/node": "^20.14.13",
-    "@typescript-eslint/eslint-plugin": "^8.0.0",
-    "caniuse-lite": "^1.0.30001643",
-    "changelogen": "^0.5.5",
-    "eslint": "^9.8.0",
-    "nuxt": "^3.14.0",
-    "vitepress": "^1.3.1",
-    "vitest": "^2.0.4"
+    "@types/node": "^24.10.0",
+    "@typescript-eslint/eslint-plugin": "^8.46.3",
+    "caniuse-lite": "^1.0.30001754",
+    "changelogen": "^0.6.2",
+    "eslint": "^9.39.1",
+    "nuxt": "^4.2.0",
+    "vitepress": "^1.6.4",
+    "vitest": "^3.2.4"
   }
 }
