--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,9 @@
 name: Publish to NPM
 
 on:
-  release:
-    types: [published]
+  workflow_dispatch:
+#   release:
+#     types: [published]
 
 jobs:
     publish:
